--- a/ad.html
+++ b/ad.html
@@ -24,7 +24,7 @@
           <div class="locatio animation-up" >
             <strong>Portalegre</strong>
 
-            <p>Portalegre cidade</p>
+            <p>Portalegre cidade IPP melhor politecnico do mundo</p>
           </div>
         </header>
 
